Modify validation for updating photo and adjust test